--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,23 +1,23 @@
 <footer>
     <div class="footer-container">
         <div class="footer-section">
-            <h5>Navigation</h5>
+            <h5>{{ 'navigation' | translate }}</h5>
             <ul>
 
-                <li> <a routerLink="home">Home</a></li>
-                <li><a routerLink="products">Shop</a></li>
-                <li><a routerLink="about-us">About Us</a></li>
+                <li> <a routerLink="home">{{ 'home' | translate }}</a></li>
+                <li><a routerLink="products">{{ 'shop_now' | translate }}</a></li>
+                <li><a routerLink="about-us">{{ 'about' | translate }}</a></li>
             </ul>
         </div>
 
         <div class="footer-section">
-            <h5>Contact Us</h5>
+            <h5>{{ 'contact' | translate }}</h5>
             <p>Email: office&#64;gmail.com</p>
             <p>Phone: +1 (123) 456-7890</p>
         </div>
 
         <div class="footer-section">
-            <h5>Follow Us</h5>
+            <h5>{{ 'follow' | translate }}</h5>
             <div class="social-media">
                 <a href="#" target="_blank" class="pi pi-facebook"> Facebook</a>
                 <a href="#" target="_blank" class="pi pi-instagram"> Instagram</a>
